Alo2cluster22/PBE0/alclusterpyscf-13921406.err
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) xalt/2.10.45
lmod: xalt was automatically unloaded
  File "alcluster.py", line 115
    mf2.verbose = 4
    ^
IndentationError: unexpected indent
srun: error: a029: task 0: Exited with exit code 1
Command exited with non-zero status 1
	Command being timed: "srun --cpu-bind=cores python -u alcluster.py"
	User time (seconds): 0.00
	System time (seconds): 0.00
	Percent of CPU this job got: 0%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:01.20
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 8448
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 0
	Minor (reclaiming a frame) page faults: 1257
	Voluntary context switches: 36
	Involuntary context switches: 0
	Swaps: 0
	File system inputs: 0
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
